fix: various compiler warnings